config/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      number: 80
      name: http
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingressgateway
spec:
  hosts:
  - '*'
  gateways:
  - ingressgateway
  http:
  - route:
    - destination:
        host: app-ui
        port:
          number: 8080
