config/istio/serviceentry-keycloak.yaml
# This lets the context-scraper service make external service calls to googleapis
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: keycloak-egress
spec:
  hosts:
  - %SSO_SVC%
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
