config/istio/virtual-service-userprofile-503.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userprofile
spec:
  hosts:
  - userprofile
  http:
  - fault:
      abort:
        httpStatus: 503
        percentage: 
          value: 50
    route:
    - destination:
        host: userprofile
        subset: v3
